멤버 프로젝트 - 회원 목록 조회, 상세조회, 정보 수정 구현.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -11,5 +11,6 @@
     <h2>Main Page</h2>
     <a href="/member/save">회원가입</a> <br>
     <a href="/member/login">로그인</a> <br>
+    <a href="/member">회원목록</a>
 </body>
 </html>
