--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     session 값 확인하기 : <p th:text="${session.loginEmail}"></p>
+    <a href="/member/update">내 정보 수정하기</a>
 </body>
 </html>
