--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -6,14 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>save</title>
+    <!--  AJAX를 사용하기 위한 jQuery CDN  -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--  action 속성 : form에 작성한 데이터를 어디로 보낼지 지정  -->
     <form action="/member/save" method="post">
     <label>
         <!-- name 속성 : 서버로 전송할 때 변수명 역할을 함. -->
-        이메일: <input type="email" name="memberEmail"> <br>
+        이메일: <input type="email" name="memberEmail" id="memberEmail" onkeyup="emailCheck()"> <br>
     </label>
+        <span id="check-result"></span> <br>
     <label>
         비밀번호: <input type="password" name="memberPassword"> <br>
     </label>
@@ -23,4 +26,34 @@
     <input type="submit" value="회원가입">
     </form>
 </body>
+<script th:inline="javascript">
+    const emailCheck = () => {
+        const email = document.getElementById("memberEmail").value;
+        const checkResult = document.getElementById("check-result");
+        console.log("입력값: ", email);
+        $.ajax({
+            // 요청방식 : post, url : "email-check", 데이터: 이메일.
+            type: "post",
+            url: "/member/email-check",
+            data: {
+                "memberEmail": email
+            },
+            success: function (res) {
+                console.log("요청성공", res);
+                if (res === "ok") {
+                    console.log("사용 가능한 이메일.");
+                    checkResult.style.color = "green";
+                    checkResult.innerHTML = "사용 가능한 이메일.";
+                } else {
+                    console.log("이미 사용중인 이메일.");
+                    checkResult.style.color = "red";
+                    checkResult.innerHTML = "이미 사용중인 이메일.";
+                }
+            },
+            error: function (err) {
+                console.log("에러발생", err);
+            },
+        })
+    }
+</script>
 </html>
